--- a/package.json
+++ b/package.json
@@ -7,20 +7,33 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chartjs-plugin-dragdata": "^1.1.3",
+    "color-hash": "^1.0.3",
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "register-service-worker": "^1.7.1",
+    "tiptap-vuetify": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@mdi/font": "^5.5.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "node-sass": "^4.12.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
